fixed cup spill

--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ a:hover {
   color: lightcoral;
 }
 a {
-    color: black;
-    text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
 .h1 {
   font-size: 48px;
@@ -14,14 +14,14 @@ a {
 .navbar {
   box-sizing: border-box;
   background-color: #333;
- /* margin-top: -15px;
+  /* margin-top: -15px;
   margin-left: -15px;
   margin-right: -15px;*/
   position: fixed;
-  top:0;
+  top: 0;
   z-index: 500;
   overflow: visible;
-  width:100%;
+  width: 100%;
   text-align: center;
 }
 
@@ -50,17 +50,17 @@ a {
 }
 
 .homelogo img {
-  width:30%;
+  width: 30%;
 }
 
 .dropdown {
-    float: right;
-    font-size: 21px;
-    background-color: inherit;
-    font-family: inherit;
-    margin-top: 36px;
-    margin-bottom: 8px;
-    margin-right: 202px;
+  float: right;
+  font-size: 21px;
+  background-color: inherit;
+  font-family: inherit;
+  margin-top: 36px;
+  margin-bottom: 8px;
+  margin-right: 202px;
 }
 
 .dropdown a {
@@ -77,29 +77,30 @@ a {
 
 /*---End of Nav---*/
 
-
 /*----Ring Phone----*/
 * {
   box-sizing: border-box;
-}svg {width: 75%;}
+}
+svg {
+  width: 75%;
+}
 .ringphone {
   margin-top: 100px;
-  display: flex;/*
+  display: flex; /*
   justify-content: center;*/
 }
 .contact banana-phone {
-  flex:1;
+  flex: 1;
   flex-direction: column;
 }
 .logo anna-logo {
-  flex:1;
+  flex: 1;
   flex-direction: column;
 }
 .banana {
   margin-bottom: -35px;
   margin-left: 18px;
   margin-right: 142px;
-
 }
 .phone {
   width: 380px;
@@ -110,20 +111,38 @@ a {
 .jiggle {
   animation-name: jiggle;
   animation-duration: 1.8s;
-  animation-fill-mode:forwards;
+  animation-fill-mode: forwards;
   animation-timing-function: linear;
 }
 
 @keyframes jiggle {
-  0% { transform:rotate(15deg);}
-  15% {  transform:rotate(-15deg);}
-  30% { transform:rotate(15deg);}
-  45% {  transform:rotate(-15deg);}
-  55% { transform:rotate(15deg);}
-  65% {  transform:rotate(-15deg);}
-  75% {  transform:rotate(0deg);}
-  85% {  transform:rotate(-15deg);}
-  100% {  transform:rotate(0deg);}
+  0% {
+    transform: rotate(15deg);
+  }
+  15% {
+    transform: rotate(-15deg);
+  }
+  30% {
+    transform: rotate(15deg);
+  }
+  45% {
+    transform: rotate(-15deg);
+  }
+  55% {
+    transform: rotate(15deg);
+  }
+  65% {
+    transform: rotate(-15deg);
+  }
+  75% {
+    transform: rotate(0deg);
+  }
+  85% {
+    transform: rotate(-15deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 /*---End of Ring Phone---*/
 
@@ -134,21 +153,21 @@ a {
   font-size: 40px;
 }
 .contact {
-  flex:1;
+  flex: 1;
 }
 .logo-class {
-  display:flex;
+  display: flex;
   margin: 20px;
 }
 .logo.al {
-    flex: 1;
-    padding-top: 75px;
-    padding-bottom: 75px;
-    margin-right: 68px;
-    margin-left: 22px;
+  flex: 1;
+  padding-top: 75px;
+  padding-bottom: 75px;
+  margin-right: 68px;
+  margin-left: 22px;
 }
 .logo.map {
-  flex:1;
+  flex: 1;
   text-align: center;
 }
 .contact:first-contact {
@@ -157,36 +176,36 @@ a {
 #message {
   height: 165px;
   width: 500px;
-  box-shadow: 7px 10px 6px -2px rgba(0,0,0,0.7);
+  box-shadow: 7px 10px 6px -2px rgba(0, 0, 0, 0.7);
   border: 5px solid transparent;
   background-color: azure;
   border-radius: 10px;
 }
 #fname {
-box-shadow: 7px 10px 6px -2px rgba(0,0,0,0.7);
-border: 5px solid transparent;
-background-color: azure;
-border-radius: 6px;
+  box-shadow: 7px 10px 6px -2px rgba(0, 0, 0, 0.7);
+  border: 5px solid transparent;
+  background-color: azure;
+  border-radius: 6px;
 }
 
 #lname {
-box-shadow: 7px 10px 6px -2px rgba(0,0,0,0.7);
-border: 5px solid transparent;
-background-color: azure;
-border-radius: 6px;
+  box-shadow: 7px 10px 6px -2px rgba(0, 0, 0, 0.7);
+  border: 5px solid transparent;
+  background-color: azure;
+  border-radius: 6px;
 }
 
-#pronouns{
-box-shadow: 7px 10px 6px -2px rgba(0,0,0,0.7);
-border: 5px solid transparent;
-background-color: azure;
-border-radius: 6px;
+#pronouns {
+  box-shadow: 7px 10px 6px -2px rgba(0, 0, 0, 0.7);
+  border: 5px solid transparent;
+  background-color: azure;
+  border-radius: 6px;
 }
 #email {
-box-shadow: 7px 10px 6px -2px rgba(0,0,0,0.7);
-border: 5px solid transparent;
-background-color: azure;
-border-radius: 6px;
+  box-shadow: 7px 10px 6px -2px rgba(0, 0, 0, 0.7);
+  border: 5px solid transparent;
+  background-color: azure;
+  border-radius: 6px;
 }
 
 /*---loading screen START---
@@ -265,35 +284,38 @@ border-radius: 6px;
   padding: 130px;
 }
 
-html, body , .menu-container {
+html,
+body,
+.menu-container {
   height: 100%;
   margin: 0;
 }
 
- For presentation only 
-
-.menu-container {
+For presentation only .menu-container {
   position: relative;
 }
 
 .break-menu {
-  display:none;
-  margin-top:120px;
-  padding:80px;
+  display: none;
+  margin-top: 120px;
+  padding: 80px;
 }
 .lunch-menu {
-  display:none;
-  margin-top:120px;
-  padding:80px;
+  display: none;
+  margin-top: 120px;
+  padding: 80px;
 }
 /*---about---*/
-.about-column{
+.about-column {
   margin-top: 100px;
   display: flex;
 }
 .contain-tea {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+}
+.contain-tea div {
+  flex: 1;
 }
 .about {
   margin: 40px;
@@ -301,58 +323,56 @@ html, body , .menu-container {
 
 .about.content {
   position: flex;
-  top:0;
-  left:0;
-  padding:100px;
-  margin-top: 20%;
-  margin-right: 38%;
-  }
+  top: 0;
+  left: 0;
+}
 
-.about.teaspill{
+.about.teaspill {
   flex: 1;
 }
 
-html, body , .about-column {
+html,
+body,
+.about-column {
   height: 100%;
   margin: 0;
-  margin-top: 39px;
+  margin-top: 34px;
 }
 
 #spill-type {
   margin-top: 2px;
   margin-bottom: 92px;
-  margin-right: 354px;
+  width: 70%;
 }
 .teaspill {
   display: block;
 }
 #teacup-spill {
   display: contain;
-  padding: 90px;
   transition: transform 1s;
-  margin-top: -156px;
+  width: 70%;
 }
 .flip {
   transform: rotate(-45deg);
 }
-
+body.aboutpage {
+  background-color: #c1f0e9;
+}
 /*----fill---*/
 :root {
-  --background:white;
+  --background: white;
   --dark: #886c43;
   --liquid: blue;
 }
 
-
 .box {
   background: var(--dark);
-  width:200vw;
-  height:110vh;
+  width: 200vw;
+  height: 110vh;
   outline: 0;
-  left:0;
-  right:0;
+  left: 0;
+  right: 0;
 }
-
 
 .box::before {
   /* content: "FILL";
@@ -368,14 +388,14 @@ html, body , .about-column {
 .box::after {
   content: "";
   position: absolute;
-  bottom:0;
-  left:-50px;
+  bottom: 0;
+  left: -50px;
   height: 150%;
   width: 250%;
-  animation: spin 6s ease-in-out forwards;background-color: var(--background);
-  border-radius: 25%; 
-  }/* Smooth edges to appear like liquid */
-
+  animation: spin 6s ease-in-out forwards;
+  background-color: var(--background);
+  border-radius: 25%;
+} /* Smooth edges to appear like liquid */
 
 @keyframes spin {
   0% {
@@ -396,9 +416,9 @@ html, body , .about-column {
 }
 
 section.hours {
-    margin-top: -35px;
-    margin-bottom: 52px;
-    text-align: center;
-    font-size: 36px;
-    color: dimgrey;
+  margin-top: -35px;
+  margin-bottom: 52px;
+  text-align: center;
+  font-size: 36px;
+  color: dimgrey;
 }
